--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <form action="#">
           <fieldset> 
             <p>
-              This is a chat room. Both the client-side and server-side are
-              written in javascript. The source code is
-              <a href="http://github.com/ry/node_chat/tree/master">here</a>.
+              Welcome to vlpeng chat room. Please enter your name and start chating with vlpeng.
+              The source code is license by ry (Ryan Dahl).              
             </p>
 
             <label for="nick">Name</label>
